# Mnemosyne

./: .gitignore  CHANGELOG.md  CONFLICT_ANALYSIS.md  CONTRIBUTING.md  README.md  SECURITY.md  conflicts.txt  plan_review.js  pyproject.toml  start-mnemosyne.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
IMPLEMENTATION-PLANS/: implementation_plan_00.md  implementation_plan_01.md  implementation_plan_02.md  implementation_plan_03.md  implementation_plan_04.md  implementation_plan_05.md  implementation_plan_06.md  implementation_plan_07.md  implementation_plan_08.md  implementation_plan_09.md  implementation_plan_10.md  implementation_plan_11.md  implementation_plan_12.md
REQUIRMENTS/: 00_INDEX.md  01_PROJECT_OVERVIEW.md  02_PRODUCT_REQUIREMENTS.md  03_SYSTEM_ARCHITECTURE.md  04_MEMORY_MODEL.md  05_CONFLICT_RESOLUTION.md  06_COGNITIVE_EXTRACTION.md  07_DATABASE_SCHEMA.md  08_API_DESIGN.md  09_FRONTEND_DESIGN.md  10_BACKEND_LOGIC.md  11_TECH_STACK.md  12_USE_CASES.md  13_SECURITY_PRIVACY.md  14_DOS_AND_DONTS.md  15_TESTING_STRATEGY.md  16_DEPLOYMENT.md  17_COLD_START.md
backend/: __init__.py  config.py  container.py  errors.py  main.py
backend/db/: encryption.py  global_db.py  manager.py  migrations.py  schema.py
backend/extraction/: confidence_scorer.py  hypothetical_detector.py  idea_extractor.py  importance_scorer.py  llm_extractor.py  ner_extractor.py  pipeline.py  rule_based.py  (+1 more)
docs/: DEMO.md
extension/: background.ts  globals.d.ts  package-lock.json  package.json  popup.tsx  sidepanel.tsx  style.css  tailwind.config.js  tsconfig.json
files/: 00_FIX_INDEX.md  FIX_plan_01.md  FIX_plan_02.md  FIX_plan_03.md  FIX_plan_04.md  FIX_plan_05.md  FIX_plan_06.md  FIX_plan_07.md  FIX_plan_08.md  FIX_plan_10.md  FIX_plan_11.md  FIX_plan_12.md
scripts/: install_linux.sh  install_macos.sh  install_windows.ps1  uninstall_linux.sh  uninstall_macos.sh  uninstall_windows.ps1
stitch-ref/: 01-memory-browser.html  02-memory-graph.html  03-session-replay.html  04-conflict-manager.html  05-sidepanel-cmdk.html  06-toolbar-popup.html  07-settings.html  08-context-bar.html  09-onboarding.html  10-overview-shell.html  intricate-memory-graph.html  urls.txt
tests/: conftest.py
(+107 files in other folders)
